<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="cari_film">Search Movie…</string>
    <string name="cari">Search</string>
    <string name="search_hint">@string/cari</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="show_more">More..</string>
    <string name="menu_lang">Change Language</string>
    <string name="popularity">Popularity:</string>
    <string name="release_date">Release Date:</string>
    <string name="sinopsys">Sinopsys:</string>
    <string name="rating">Rating:</string>
    <string name="favorite">Favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="added_to_favorite">ADDED TO FAVORITES</string>
    <string name="removed_from_favorite">REMOVED FROM FAVORITES</string>
    <string name="no_data">FAVORITES LIST IS EMPTY</string>
    <string name="appwidget_text">My Favorite Movies</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">You don\'t have favorite movies yet</string>
    <string name="error_load">Failed to load data. \\n Please check your internet connection!</string>
    <string name="upcoming_activated">Upcoming reminder notification is now activated</string>
    <string name="set_reminder">Good morning! Here movie updates for you</string>
</resources>